feat: Add lesson count, duration, price, thumbnail, category for course